# Sots02

./: .gitignore  README.md  Sots02.sln
GeoMathCore/: CMakeLists.txt  GeoMath.cpp  GeoMath.h  GeoMathCore.vcxproj  GeoMathCore.vcxproj.filters
GeoMathTests/: GeoMathTests.vcxproj  test_main.cpp
Sots02/: GeoMath.cpp  GeoMath.h  Sots02.cpp  Sots02.h  Sots02.rc  Sots02.vcxproj  Sots02.vcxproj.filters  Sots02Dlg.cpp  Sots02Dlg.h  resource.h  stdafx.cpp
Sots02/res/: Sots02.rc2
docs/: ROADMAP.md  TECHNICAL_NOTES_v1.0.1.md  TECHNICAL_NOTES_v1.0.2.md
